force-app/main/default/objects/JobListing__c/JobListing__c.object-meta.xml
<CustomObject>
    <label>Job Listing</label>
    <nameField>
        <displayFormat>JD-{0000}</displayFormat>
        <label>Job Listing Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>